[package]
name = "starknet-vanity-contract-address"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
rand = "0.8.5"
rayon = "1.6.1"
regex = "1.7.1"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs" }
